added meta tag viewport

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Top 7 Things</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="My Top 7 Things: Discover what is most important to you right now" />
 	<meta name="keywords" content="lifestyle, self-improvment, application, web app, self-help" />
 	<meta name="author" content="Michelle Marin: Frontend Developer + Web Designer" />
@@ -13,6 +14,16 @@
   <link rel="stylesheet" href="css/demo.css">
   <link rel="stylesheet" href="css/set2.css">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,800,500,600' rel='stylesheet' type='text/css'>
+  <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
