added container fluid

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <body>
 
   <script type="text/x-handlebars">
+  <div class="container-fluid">
 
     <div class="navbar navbar-default navbar-fixed-top main-nav" role="navigation">
       <div class="navbar-header">
@@ -98,7 +99,7 @@
       </article>
     </div>
   </p>
-
+  </div>
   </script>
 
   <script type="text/x-handlebars" id="components/thing-form">
