--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
   <title>My Top 7 Things</title>
   <meta name="description" content="My Top 7 Things: Discover what is most important to you right now" />
 	<meta name="keywords" content="lifestyle, self-improvment, application, web app, self-help" />
