styling the need help info at the bottom of the vote page

--- a/index.html
+++ b/index.html
@@ -219,10 +219,18 @@
               {{/each}}
             </div>
             <div class="clearfix">
-              <h2>Having trouble deciding?</h2>
-              <p>If this is hard to choose, ask yourself if I could have "a" but not "b",
-              would I be okay with that? If you said yes, vote on "a". If not, vote on "b".
-              </p>
+              <h2><i class="fa fa-life-saver"></i>&nbsp;Need help deciding?</h2>
+              <p>If this is hard to choose, ask yourself:<p>
+              <h4>
+                <i><i class="fa fa-quote-left"></i>&nbsp;
+                If I could have "a" but not "b", would I be okay with that?
+                <i class="fa fa-quote-right"></i></i>
+              </h4>
+               <ul class="fa-ul">
+                <li>If you said yes, vote on "a".</li>
+                <li>If not, vote on "b".</li>
+              </ul>
+
             </div>
         </div>
         <div class="col-md-2"></div>
