fixed the vote page link in the responsive version of the navbar to the correct one

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <ul class="responsive-nav">
                 <li><div class="spacer"></div></li>
                 <li><a href="#/" data-hover="Home" {{action 'toggleMenu' 'index'}}><i class="fa fa-home"></i>&nbsp;Home</a></li>
-                <li><a href="#/review" data-hover="Vote" {{action 'toggleMenu' 'review_things'}}><i class="fa fa-thumb-tack"></i>&nbsp;Vote</a></li>
+                <li><a href="#/review" data-hover="Vote" {{action 'toggleMenu' 'review_things'}}><i class="fa fa-check-square-o"></i>&nbsp;Vote</a></li>
               {{#if isLoggedIn}}
                 <li><a href="#/results" data-hover="Results" {{action 'toggleMenu' 'results'}}><i class="fa fa-thumb-tack"></i>&nbsp;Results</a></li>
                 <li><a href="" {{action "logout"}} data-hover="Logout"><i class="fa fa-unlock"></i>&nbsp;Logout</a></li>
