home page fullscreen image background

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
     </div>
 
   <div class="spacer"></div>
-  <div class="spacer-sm"></div>
-  <p id="startchange">
+
+  <div id="startchange">
     <div id="content">
       <article>
         {{outlet}}
       </article>
     </div>
-  </p>
+  </div>
 
   </script>
 
@@ -251,11 +251,15 @@
   </script>
 
     <script type="text/x-handlebars" id="index">
-      <div class="container-fluid">
-        <div id="homepage">
+      <div id="homepage">
+        <div class="container-fluid">
+
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5">
+            
+              <div class="spacer-sm"></div>
+              <div class="spacer-sm"></div>
               <h1>The Most Important Things In Life <i>Aren't Things</i></h1>
               <div id="test">
                 <ul class="fa-ul">
@@ -269,9 +273,13 @@
                   <a href="#/things/new" style="color: #354856;" data-hover="Get Started">Get Started <i class="fa fa-chevron-right"></i></a>
                 </nav>
               </section>
+              <div class="spacer-sm"></div>
+              <div class="spacer-sm"></div>
+              <div class="spacer-sm"></div>
+              <div class="spacer-sm"></div>
             </div>
             <div class="col-md-5">
-              <img src="styleguide/homenew.jpg" style="width: 100%;" />
+
             </div>
             <div class="col-md-1"></div>
           </div>
